# tatoblog

./: .gitignore  README.md  config.py
app/: CMakeLists.txt  config.js
app/data/: sqlite3.db
app/sql/: sqlite3.sql
app/src/: TatoBlog.cpp  TatoBlog.h  main.cpp
app/src/contents/: Admin.h  BaseContent.h  Drafts.h  Pages.h  Posts.h  Users.h
app/src/contents/forms/: base_post_form.h  draft_edit.h  edit.h  install.h  login.h  write_new.h
app/src/controllers/webs/: Admin.cpp  Admin.h  Controller.cpp  Controller.h  Drafts.cpp  Drafts.h  Pages.cpp  Pages.h  Posts.cpp  Posts.h  Users.cpp  Users.h
app/src/models/: AbstractPosts.cpp  AbstractPosts.h  Blog.cpp  Blog.h  Drafts.cpp  Drafts.h  Posts.cpp  Posts.h
app/src/results/: Blog.h  Posts.h
app/src/views/webs/layouts/: master.tmpl
app/src/views/webs/posts/: show.tmpl  write_new.tmpl
app/src/views/webs/responsive/admin/: install.tmpl
app/src/views/webs/responsive/drafts/: edit.tmpl  show.tmpl  show_all.tmpl
app/src/views/webs/responsive/layouts/: master.tmpl  post_edition.tmpl
app/src/views/webs/responsive/pages/: homepage.tmpl
app/src/views/webs/responsive/posts/: edit.tmpl  show.tmpl  show_all.tmpl  write_new.tmpl
app/src/views/webs/responsive/users/: login.tmpl
app/tests/functionnal/: create_post.py  httpclient.py
local_template/: @MAIN_CLASS@.cpp  @MAIN_CLASS@.h  @PROJECT_NAME_CODE@.cpp  @PROJECT_NAME_CODE@.h  CMakeLists.txt  config.js  main.cpp
local_template/contents/: Pages.h  _controller_content.tpl
local_template/contents/forms/: _form_.h.tpl
local_template/controllers/webs/: Pages.cpp  Pages.h  _template_.cpp.tpl  _template_.h.tpl  _var_model_ctrl.tpl
local_template/generics/: Config.cpp  Config.h  Languages.cpp  Languages.h
local_template/models/: _model_.cpp.tpl  _model_.h.tpl
local_template/views/webs/: _action_.tpl  _form_action_.tpl
tools/: config.py  update_local_template.py
